--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "express": "^4.16.4",
+    "nodemailer": "^6.4.10",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
     "react": "^16.7.0-alpha",
