--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "nodemailer": "^6.4.10",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
